--- a/SuiviBourse/SuiviBourse/View/AlerteListViewPage.xaml
+++ b/SuiviBourse/SuiviBourse/View/AlerteListViewPage.xaml
@@ -11,7 +11,7 @@
     </ContentPage.ToolbarItems>
 
     <ListView x:Name="MyListView"  Margin="20"
-            ItemsSource="{Binding BourseActionList}"
+            ItemsSource="{Binding AlerteList}"
             ItemTapped="Handle_ItemTapped"
             CachingStrategy="RecycleElement" HasUnevenRows="True"
             >
@@ -27,14 +27,14 @@
                             <Grid.RowDefinitions>
                                
                             </Grid.RowDefinitions>
-                            <Label Margin="10" Text="{Binding Libelle, Mode=TwoWay}" FontSize="16" Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2" />
-                            <Label Text="{Binding Cours}"  FontSize="14"  Grid.Row="1" Grid.Column="0"/>
-                            <Label Text="{Binding Variation}"  FontSize="14"  Grid.Row="1" Grid.Column="1"/>
-                          
-                            <Label Text="{Binding Cours}"  FontSize="14"  Grid.Row="0" Grid.Column="2"/>
-                            <Label Text="{Binding Cours}"  FontSize="14"  Grid.Row="0" Grid.Column="3"/>
-                            <Label Text="{Binding Cours}"  FontSize="14"  Grid.Row="1" Grid.Column="2"/>
-                            <Label Text="{Binding Cours}"  FontSize="14"  Grid.Row="1" Grid.Column="3"/>
+                            <Label Margin="10" Text="{Binding Alerte.Libelle, Mode=TwoWay}" FontSize="16" Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2" />
+                            <Label Text="{Binding Cotation.Cours}"  FontSize="14"  Grid.Row="1" Grid.Column="0"/>
+                            <Label Text="{Binding Cotation.Variation}"  FontSize="14"  Grid.Row="1" Grid.Column="1"/>
+
+                            <Label Text="{Binding Alerte.AlerteHCours}"  FontSize="14"  Grid.Row="0" Grid.Column="2"/>
+                            <Label Text="{Binding Alerte.AlerteHVar}"  FontSize="14"  Grid.Row="0" Grid.Column="3"/>
+                            <Label Text="{Binding Alerte.AlerteBCours}"  FontSize="14"  Grid.Row="1" Grid.Column="2"/>
+                            <Label Text="{Binding Alerte.AlerteBVar}"  FontSize="14"  Grid.Row="1" Grid.Column="3"/>
                         </Grid>
                     </ViewCell.View >
                 </ViewCell>
